--- a/be/vegetableBackend/.env
+++ b/be/vegetableBackend/.env
@@ -2,3 +2,6 @@ PORT=3001
 MONGO_DB=mongodb+srv://nguyenquochuy3102:VaiXukqpzt5Fcx5Q@vegetableapp.esawntc.mongodb.net/?retryWrites=true&w=majority&appName=VegetableApp
 ACCESS_TOKEN=access_token
 REFRESH_TOKEN=refresh_token
+CLIENT_ID=AQXiB3GMOesNdZegqNylHufSWImgorwR38ZOKOhsvUmKzQ8f-pooxLb9qW2zmA3l_Ab4xiy-Rs6op2am
+MAIL_PASSWORD=alwlrvyfgjoebcrv
+MAIL_ACCOUNT=thienton3102@gmail.com
