--- a/be/vegetableBackend/package.json
+++ b/be/vegetableBackend/package.json
@@ -16,6 +16,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
+    "nodemailer": "^6.9.13",
+    "nodemailer-plugin-inline-base64": "^2.1.1",
     "nodemon": "^3.1.0"
   },
   "author": "",
